test/cli/test-context-apicall-vpol/resources/pod-with-mixed-computeclass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-mixed-computeclass
  namespace: test-namespace
spec:
  nodeSelector:
    cloud.google.com/compute-class: mixed-compute-class
  containers:
  - name: test-container
    image: nginx:latest
